[package]
name = "seealln"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SeeAlln: local-only eyes + hands. Rust core (stream/snapshot/controller)."

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Images
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Screen capture (cross-platform)
# Optional because it may require platform-specific deps (and typically won't work in headless Docker).
scrap = { version = "0.5", optional = true }

# Async stream
futures = "0.3"

# Input control (hands)
# Enigo supports Windows/macOS/Linux. We'll keep it optional for safety.
enigo = { version = "0.3", optional = true }

[features]
# Enable real screen capture. Disable in Docker builds.
capture = ["dep:scrap"]
# Enable native input control endpoints.
hands = ["dep:enigo"]
# Default on for native runs.
default = ["capture"]
